# OMGPL

./: CMakeLists.txt  README.md
include/: lexer.hpp  preprocessor.hpp  syntax_tree.hpp
src/: lexer.cpp  main.cpp  preprocessor.cpp  syntax_tree.cpp
tests/: MainTest.cpp
tests/programs/int/: 1.omgpl  1.res
tests/programs/string/: 1.omgpl
